--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
     /* 선택지 기호 크기 키우기 */
     #choiceButtons button {
       display:inline-block; width:18%; margin:1%; padding:.75rem 0;
-      font-size:1.5rem; /* 이전 1rem 에서 1.5rem 으로 확대 */
+      font-size:1.5rem; /* 확대된 크기 */
       border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
@@ -53,7 +53,7 @@
     #oxButtons { text-align:center; }
     #oxButtons button {
       display:inline-block; width:40%; margin:1%; padding:.75rem 0;
-      font-size:1.5rem; /* O/X 크기 크게 */
+      font-size:1.5rem; /* O/X 크게 */
       border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
@@ -69,6 +69,7 @@
 </head>
 <body>
   <div class="container">
+
     <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
       <img src="icons/home.png" alt="Home"><span>처음으로</span>
@@ -129,61 +130,60 @@
     <!-- ⑥ 틀린 문제 O/X 퀴즈 -->
     <div id="quizSection" class="hidden">
       <h1>틀린 문제 O/X 퀴즈</h1>
-      <div id="quizContainer">
-        <div id="quizSentenceSection">
-          <p id="quizSentence"></p>
-          <div id="oxButtons">
-            <button id="oxTrueBtn">O</button>
-            <button id="oxFalseBtn">X</button>
-          </div>
+      <div id="quizSentenceSection" class="hidden">
+        <p id="quizSentence"></p>
+        <div id="oxButtons">
+          <button id="oxTrueBtn">O</button>
+          <button id="oxFalseBtn">X</button>
         </div>
-        <div id="quizFeedbackSection" class="hidden">
-          <p id="quizFeedback"></p>
-          <div id="quizOptions">
-            <button id="quizNextSentenceButton">다음 선지</button>
-            <button id="quizNextQuestionButton">다음 문제</button>
-            <button id="quizReviewOriginalButton">원본 문제 풀러 가기</button>
-          </div>
+      </div>
+      <div id="quizFeedbackSection" class="hidden">
+        <p id="quizFeedback"></p>
+        <div id="quizOptions">
+          <button id="quizNextSentenceButton">다음 선지</button>
+          <button id="quizNextQuestionButton">다음 문제</button>
+          <button id="quizReviewOriginalButton">원본 문제 풀러 가기</button>
         </div>
       </div>
     </div>
+
   </div>
 
   <script>
-    let currentId = '', currentExam = '';
-    let wrongList = [], currentWrongIndex = 0, currentSentenceIndex = 0;
-    let quizSentences = [];
+    let currentId='', currentExam='';
+    let wrongList=[], currentWrongIndex=0, currentSentenceIndex=0, quizSentences=[];
 
     function hideAll() {
       ['loginSection','examSection','menuSection','reportSection','reviewSection','quizSection']
-        .forEach(id => document.getElementById(id).classList.add('hidden'));
+        .forEach(id=>document.getElementById(id).classList.add('hidden'));
     }
     function clearMsgs() {
       ['loginMsg','examMsg','menuMsg','reviewMsg','feedback','quizFeedback']
-        .forEach(id => {
-          const el = document.getElementById(id);
-          if (el) el.textContent = '';
+        .forEach(id=>{
+          const el=document.getElementById(id);
+          if(el) el.textContent='';
         });
     }
     function resetReviewUI() {
       ['submitButton','skipButton','retryButton','explainButton','nextButton','questionImage','explanationImage']
-        .forEach(id => {
-          const el = document.getElementById(id);
-          if (el) el.classList.add('hidden');
-        });
-      const cb = document.getElementById('choiceButtons');
-      if (cb) cb.innerHTML = '';
+      .forEach(id=>{
+        const el=document.getElementById(id);
+        if(el) el.classList.add('hidden');
+      });
+      const cb=document.getElementById('choiceButtons');
+      if(cb) cb.innerHTML='';
+      selectedAnswer=null;
     }
 
     // 로그인
-    document.getElementById('loginBtn').onclick = () => {
+    document.getElementById('loginBtn').onclick=()=>{
       clearMsgs(); resetReviewUI();
-      const id = document.getElementById('loginId').value.trim();
-      if (!id) { document.getElementById('loginMsg').textContent='ID를 입력하세요'; return; }
+      const id=document.getElementById('loginId').value.trim();
+      if(!id){ document.getElementById('loginMsg').textContent='ID를 입력하세요'; return; }
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
         .then(r=>r.json()).then(d=>{
-          if (d.authenticated) {
-            currentId = id; hideAll();
+          if(d.authenticated){
+            currentId=id; hideAll();
             document.getElementById('examSection').classList.remove('hidden');
             fetch('/api/exams').then(r=>r.json()).then(exs=>{
               const sel=document.getElementById('examSelect');
@@ -196,99 +196,86 @@
     };
 
     // 회차 선택
-    document.getElementById('examBtn').onclick = () => {
+    document.getElementById('examBtn').onclick=()=>{
       clearMsgs(); resetReviewUI();
-      const ex = document.getElementById('examSelect').value;
-      if (!ex) { document.getElementById('examMsg').textContent='회차 선택'; return; }
+      const ex=document.getElementById('examSelect').value;
+      if(!ex){ document.getElementById('examMsg').textContent='회차 선택'; return; }
       currentExam=ex; hideAll();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
 
     // 내 성적표
-    document.getElementById('menuReport').onclick = () => {
+    document.getElementById('menuReport').onclick=()=>{
       hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reportSection').classList.remove('hidden');
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r=>r.json()).then(d=>{
-          if (d.url) document.getElementById('reportImage').src=d.url;
+          if(d.url) document.getElementById('reportImage').src=d.url;
           else       document.getElementById('reportMsg').textContent=d.error;
         }).catch(()=>document.getElementById('reportMsg').textContent='로드 오류');
     };
 
     // 틀린 문제 다시 풀기
-    document.getElementById('menuReview').onclick = () => {
+    document.getElementById('menuReview').onclick=()=>{
       hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r=>r.json()).then(d=>{
-          wrongList = d.wrongList.map(x=>x.question);
-          currentWrongIndex = 0;
+          wrongList=d.wrongList.map(x=>x.question);
+          currentWrongIndex=0;
           loadQuestion(wrongList[0]);
         }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
     };
 
-    // OX 퀴즈 시작
-    document.getElementById('menuQuiz').onclick = () => {
-      hideAll(); clearMsgs(); resetReviewUI();
-      document.getElementById('quizSection').classList.remove('hidden');
-      // 틀린 문제 목록 가져오기
-      fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r=>r.json()).then(d=>{
-          wrongList = d.wrongList.map(x=>x.question);
-          currentWrongIndex = 0;
-          currentSentenceIndex = 0;
-          loadQuizSentences(wrongList[0]);
-        }).catch(()=>alert('OX 퀴즈 로드 오류'));
-    };
-
-    // --- 리뷰 함수들 ---
-    function loadQuestion(qno) {
+    function loadQuestion(qno){
       clearMsgs(); resetReviewUI();
-      const qi = document.getElementById('questionImage');
-      qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+      const qi=document.getElementById('questionImage');
+      qi.src=`/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      const cb = document.getElementById('choiceButtons');
-      ['①','②','③','④','⑤'].forEach((label, idx) => {
-        const btn = document.createElement('button');
-        btn.textContent = label;
-        btn.onclick = ()=>{
-          selectedAnswer = idx+1;
+      const cb=document.getElementById('choiceButtons');
+      ['①','②','③','④','⑤'].forEach((label,idx)=>{
+        const btn=document.createElement('button');
+        btn.textContent=label;
+        btn.onclick=()=>{
+          selectedAnswer=idx+1;
           cb.querySelectorAll('button').forEach(b=>b.style.background='white');
           btn.style.background='#d0e6ff';
         };
         cb.appendChild(btn);
       });
-      document.getElementById('submitButton').classList.remove('hidden');
-      document.getElementById('submitButton').onclick = ()=>submitAnswer(qno);
-      document.getElementById('skipButton').classList.remove('hidden');
-      document.getElementById('skipButton').onclick = ()=>nextQuestion();
+      const sb=document.getElementById('submitButton');
+      sb.classList.remove('hidden');
+      sb.onclick=()=>submitAnswer(qno);
+      const skip=document.getElementById('skipButton');
+      skip.classList.remove('hidden');
+      skip.onclick=()=>nextQuestion();
     }
-    function submitAnswer(qno) {
-      if (typeof selectedAnswer !== 'number') {
+    function submitAnswer(qno){
+      if(typeof selectedAnswer!=='number'){
         document.getElementById('reviewMsg').textContent='선지를 선택하세요'; return;
       }
       clearMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
         .then(r=>r.json()).then(d=>{
           document.getElementById('reviewQuestionSection').classList.add('hidden');
-          const fb = document.getElementById('feedback');
-          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
-          fb.style.color = d.correct?'#007bff':'#dc3545';
+          const fb=document.getElementById('feedback');
+          fb.textContent=d.correct?'정답입니다!':'오답입니다.';
+          fb.style.color=d.correct?'#007bff':'#dc3545';
           document.getElementById('reviewFeedbackSection').classList.remove('hidden');
-          const retry = document.getElementById('retryButton');
+          const retry=document.getElementById('retryButton');
           retry.classList.remove('hidden');
-          retry.onclick = ()=>{ document.getElementById('reviewFeedbackSection').classList.add('hidden'); document.getElementById('reviewQuestionSection').classList.remove('hidden'); loadQuestion(qno); };
-          const expb = document.getElementById('explainButton');
+          retry.onclick=()=>{ document.getElementById('reviewFeedbackSection').classList.add('hidden'); document.getElementById('reviewQuestionSection').classList.remove('hidden'); loadQuestion(qno); };
+          const expb=document.getElementById('explainButton');
           expb.classList.remove('hidden');
-          expb.onclick = ()=>{
-            const ei = document.getElementById('explanationImage');
-            ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+          expb.onclick=()=>{
+            const ei=document.getElementById('explanationImage');
+            ei.src=`/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
             ei.classList.remove('hidden');
           };
-          const next = document.getElementById('nextButton');
+          const next=document.getElementById('nextButton');
           next.classList.remove('hidden');
-          next.onclick = ()=>nextQuestion();
+          next.onclick=()=>nextQuestion();
         }).catch(()=>document.getElementById('feedback').textContent='오류');
     }
     function nextQuestion(){
@@ -299,56 +286,59 @@
       else location.reload();
     }
 
-    // --- OX 퀴즈 함수들 ---
-    function loadQuizSentences(qno){
-      // 문장 + 정답 O/X 배열 불러오기
-      fetch(`/api/quiz_sentences?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}&question=${qno}`)
+    // OX 퀴즈
+    document.getElementById('menuQuiz').onclick=()=>{
+      hideAll(); clearMsgs(); resetReviewUI();
+      document.getElementById('quizSection').classList.remove('hidden');
+      fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r=>r.json()).then(d=>{
-          quizSentences = d.sentences;  // [{ text, correct }, ...]
-          currentSentenceIndex = 0;
+          wrongList=d.wrongList.map(x=>x.question);
+          currentWrongIndex=0; currentSentenceIndex=0;
+          loadQuizSentences(wrongList[0]);
+        }).catch(()=>alert('OX 퀴즈 로드 오류'));
+    };
+    function loadQuizSentences(qno){
+      fetch(`/api/quiz_sentences?exam=${encodeURIComponent(currentExam)}&question=${qno}`)
+        .then(r=>r.json()).then(d=>{
+          quizSentences=d.sentences;
+          currentSentenceIndex=0;
           showQuizSentence();
         });
     }
     function showQuizSentence(){
       clearMsgs(); resetReviewUI();
-      const q = quizSentences[currentSentenceIndex];
-      document.getElementById('quizSentence').textContent = q.text;
-      document.getElementById('quizSentenceSection').classList.remove('hidden');
-      document.getElementById('oxTrueBtn').onclick = ()=>handleQuizAnswer(true);
-      document.getElementById('oxFalseBtn').onclick = ()=>handleQuizAnswer(false);
+      const sec=document.getElementById('quizSentenceSection');
+      const q=quizSentences[currentSentenceIndex];
+      document.getElementById('quizSentence').textContent=q.text;
+      sec.classList.remove('hidden');
+      document.getElementById('oxTrueBtn').onclick=()=>handleQuizAnswer(true);
+      document.getElementById('oxFalseBtn').onclick=()=>handleQuizAnswer(false);
     }
-    function handleQuizAnswer(answerBool){
-      const correctBool = quizSentences[currentSentenceIndex].correct;
-      const fb = document.getElementById('quizFeedback');
-      fb.textContent = answerBool===correctBool? '정답입니다!' : '오답입니다.';
-      fb.style.color = answerBool===correctBool? '#007bff':'#dc3545';
+    function handleQuizAnswer(ans){
+      const correct=quizSentences[currentSentenceIndex].correct;
+      const fb=document.getElementById('quizFeedback');
+      fb.textContent=ans===correct?'정답입니다!':'오답입니다.';
+      fb.style.color=ans===correct?'#007bff':'#dc3545';
       document.getElementById('quizSentenceSection').classList.add('hidden');
       document.getElementById('quizFeedbackSection').classList.remove('hidden');
-      // 옵션 표시
-      // 다음 선지
-      const nextSentB = document.getElementById('quizNextSentenceButton');
-      if(currentSentenceIndex < quizSentences.length-1){
-        nextSentB.classList.remove('hidden');
-        nextSentB.onclick = ()=>{
+      const nextSent=document.getElementById('quizNextSentenceButton');
+      if(currentSentenceIndex<quizSentences.length-1){
+        nextSent.classList.remove('hidden');
+        nextSent.onclick=()=>{
           currentSentenceIndex++;
           showQuizSentence();
         };
-      } else {
-        nextSentB.classList.add('hidden');
-      }
-      // 다음 문제
-      document.getElementById('quizNextQuestionButton').classList.remove('hidden');
-      document.getElementById('quizNextQuestionButton').onclick = ()=>{
+      } else nextSent.classList.add('hidden');
+      const nextQ=document.getElementById('quizNextQuestionButton');
+      nextQ.classList.remove('hidden');
+      nextQ.onclick=()=>{
         currentWrongIndex++;
-        if(currentWrongIndex < wrongList.length){
-          loadQuizSentences(wrongList[currentWrongIndex]);
-        } else {
-          location.reload();
-        }
+        if(currentWrongIndex<wrongList.length) loadQuizSentences(wrongList[currentWrongIndex]);
+        else location.reload();
       };
-      // 원본 문제 풀러 가기
-      document.getElementById('quizReviewOriginalButton').classList.remove('hidden');
-      document.getElementById('quizReviewOriginalButton').onclick = ()=>{
+      const rev=document.getElementById('quizReviewOriginalButton');
+      rev.classList.remove('hidden');
+      rev.onclick=()=>{
         hideAll(); clearMsgs(); resetReviewUI();
         document.getElementById('reviewSection').classList.remove('hidden');
         loadQuestion(wrongList[currentWrongIndex]);
@@ -356,7 +346,7 @@
     }
 
     // 홈 버튼
-    document.getElementById('homeButton').onclick = ()=>{
+    document.getElementById('homeButton').onclick=()=>{
       hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
